crates/loxia-tui/src/views/snapshots/loxia_tui__views__settings__tests__settings_snapshot_Sorting.snap
---
source: crates/loxia-tui/src/views/settings.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 28 },
    content: [
        "┌──────────────┐┌Sorting───────────────────────────────────────────────────────────────────────────┐",
        "│Servers       ││▶ default queue sort: chronological_discog                                        │",
        "│Audio         ││  the sort profile new full-context queues are ordered by                         │",
        "│Cache         ││  sort profiles: manage sort profiles (2 defined)                                 │",
        "│Transcode     ││  add, edit, or remove named sort profiles                                        │",
        "│Interface     ││                                                                                  │",
        "│Sorting       ││                                                                                  │",
        "│Equalizer     ││                                                                                  │",
        "│Keybindings   ││                                                                                  │",
        "│About         ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "│              ││                                                                                  │",
        "└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 0, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Indexed(15), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Indexed(8), underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 18, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 19, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 20, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 21, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 22, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 23, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 23, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 23, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 24, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 24, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 24, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 24, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 25, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 25, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 25, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 25, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 26, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 26, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 26, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 26, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 27, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 27, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
